--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
     "reflect-metadata": "^0.2.0",
-    "typia": "^6.4.3"
+    "typia": "^6.4.3",
     "@nestjs/schedule": "^4.1.0",
     "@nestjs/typeorm": "^10.0.2",
     "class-validator": "^0.14.1",
